@@ -51,6 +51,9 @@ Features:
   client.selectTemplate (anatoly techtonik)
 - Increased generated password length to 12 symbols to slow down GPGPU
   attacks (anatoly techtonik)
+- Implement XMLRPC MultiCall (including test), see
+  http://docs.python.org/2/library/xmlrpclib.html#xmlrpclib.MultiCall
+  (Ralf Schlatterbeck)
 
 Fixed:
 
@@ -66,7 +69,7 @@ Fixed:
   (Pradip Caulagi)
 - [minor] Template responsive: make demo.py work out of the box with it,
   by setting the static_files config.ini setting to "static". 
-  Footer: link fixed and hardcoded last modfied date removed. (Bernhard Reiter)
+  Footer: link fixed and hardcoded last modified date removed. (Bernhard Reiter)
 - demo.py print location of tracker home and fully erase its directory
   when nuking (anatoly techtonik)
 - demo.py changing hostname in config.ini actually changes the address
